update my project

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && scp -r -i ~/.ssh/id_ed25519 ./build/* ian_kamar@iankamar-wtwr.cbu.net:/home/ian_kamar/frontend"
+    "deploy": "npm run build && scp -r -i ~/.ssh/id_ed25519 ./build/* ian_kamar@iankamar-wtwr.cbu.net:/home/ian_kamar/frontend",
+    "start:dev": "NODE_ENV=development react-scripts start",
+    "start:test": "NODE_ENV=testing react-scripts start",
+    "start:prod": "NODE_ENV=production react-scripts start"
   },
   "eslintConfig": {
     "extends": [
