--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "homepage": "https://www.iankamar-wtwr.cbu.net"
+  "homepage": "https://api.iankamar-wtwr.cbu.net"
 }
