--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-feather": "^2.0.10",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xsel": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
